--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-redux": "^7.1.3",
     "react-redux-firebase": "^2.5.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.0",
     "react-table": "^6.11.5",
     "redux": "^4.0.5",
     "redux-firestore": "^0.8.0",
